Added experimental multicore via java args